# Pyeongtaekcoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: lint_04_install.sh  lint_05_before_script.sh  lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build_msvc/: README.md  libsecp256k1_config.h  msvc-autogen.py  pyeongtaekcoin.sln  pyeongtaekcoin_config.h
contrib/: gitian-build.py  install_db4.sh  pyeongtaekcoin-cli.bash-completion
depends/: README.md
doc/: JSON-RPC-interface.md  README.md  REST-interface.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  init.md  productivity.md  psbt.md  pyeongtaekcoin-conf.md  reduce-traffic.md  release-notes-0.18.1-16257.md  release-notes-pyeongtaekcoin.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile  Makefile.am  pyeongtaekcoin-cli.1  pyeongtaekcoin-qt.1  pyeongtaekcoin-tx.1  pyeongtaekcoin-wallet.1  pyeongtaekcoind.1
share/: setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  (+101 more)
(+623 files in other folders)
