dist_man1_MANS=

if BUILD_PYEONGTAEKCOIND
  dist_man1_MANS+=pyeongtaekcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=pyeongtaekcoin-qt.1
endif

if BUILD_PYEONGTAEKCOIN_CLI
  dist_man1_MANS+=pyeongtaekcoin-cli.1
endif

if BUILD_PYEONGTAEKCOIN_TX
  dist_man1_MANS+=pyeongtaekcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_PYEONGTAEKCOIN_WALLET
  dist_man1_MANS+=pyeongtaekcoin-wallet.1
endif
endif
